// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperDatePicker props accepts data-test-subj and passes to EuiFormControlLayout 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted"
  data-test-subj="mySuperDatePicker"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker props compressed is rendered 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-s-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker props isAutoRefreshOnly is rendered 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted-isAutoRefreshOnly"
>
  <div
    class="euiPopover euiInputPopover euiAutoRefresh emotion-euiPopover-block-EuiInputPopover"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--readOnly euiFormControlLayout--group"
    >
      <button
        class="euiButtonEmpty euiFormControlLayout__prepend euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="timeRefresh"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <strong>
              <small>
                Auto refresh
              </small>
            </strong>
          </span>
        </span>
      </button>
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <input
          aria-label="Auto refresh"
          class="euiFieldText emotion-euiFieldText-inGroup"
          readonly=""
          type="text"
          value="Off"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperDatePicker props isAutoRefreshOnly passes required props 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted-isAutoRefreshOnly"
  data-test-subj="autoRefreshOnly"
>
  <div
    class="euiPopover euiInputPopover euiAutoRefresh emotion-euiPopover-block-EuiInputPopover"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--readOnly euiFormControlLayout--group"
    >
      <button
        class="euiButtonEmpty euiFormControlLayout__prepend euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="timeRefresh"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <strong>
              <small>
                Auto refresh
              </small>
            </strong>
          </span>
        </span>
      </button>
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <input
          aria-label="Auto refresh"
          class="euiFieldText emotion-euiFieldText-inGroup"
          disabled=""
          readonly=""
          type="text"
          value="Off"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperDatePicker props isDisabled config object 1`] = `
<button
  class="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--disabled emotion-euiSuperDatePicker__prettyFormat"
  data-test-subj="superDatePickerShowDatesButton"
  disabled=""
  type="button"
>
  <span
    data-test-subj="customDisabledDisplay"
  >
    All time
  </span>
</button>
`;

exports[`EuiSuperDatePicker props isDisabled true 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-disabled"
    disabled=""
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-disabled-isDisabled"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        disabled=""
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--disabled emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        disabled=""
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-isDisabled-fill-disabled"
      data-test-subj="superDatePickerApplyTimeButton"
      disabled=""
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker props isQuickSelectOnly is rendered 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-auto-isQuickSelectOnly"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    />
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker props showUpdateButton can be false 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted-noUpdateButton"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiSuperDatePicker props showUpdateButton can be iconOnly 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-restricted"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        <span
          class="eui-textTruncate euiScreenReaderOnly"
        >
          Refresh
        </span>
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker props width can be auto 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-auto"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker props width can be full 1`] = `
<div
  class="euiSuperDatePicker emotion-euiSuperDatePicker-full"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker renders 1`] = `
<div
  class="euiSuperDatePicker testClass1 testClass2 emotion-euiSuperDatePicker-restricted-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group emotion-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
    >
      <button
        aria-label="Date quick select"
        class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
        data-test-subj="superDatePickerToggleQuickMenuButton"
        title="Date quick select"
        type="button"
      >
        <span
          class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            <span
              data-euiicon-type="calendar"
            />
          </span>
          <span
            color="inherit"
            data-euiicon-type="arrowDown"
          />
        </span>
      </button>
    </div>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        class="euiSuperDatePicker__prettyFormat emotion-euiSuperDatePicker__prettyFormat"
        data-test-subj="superDatePickerShowDatesButton"
        type="button"
      >
        Last 15 minutes
      </button>
    </div>
  </div>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;

exports[`EuiSuperDatePicker renders an EuiDatePickerRange 1`] = `
<div
  class="euiSuperDatePicker testClass1 testClass2 emotion-euiSuperDatePicker-restricted-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiDatePickerRange emotion-euiDatePickerRange-euiSuperDatePicker__range-euiSuperDatePicker__formControlLayout-default"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group euiFormControlLayoutDelimited"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
      >
        <button
          aria-label="Date quick select"
          class="euiButtonEmpty euiFormControlLayout__prepend emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary"
          data-test-subj="superDatePickerToggleQuickMenuButton"
          title="Date quick select"
          type="button"
        >
          <span
            class="euiButtonEmpty__content euiQuickSelectPopover__buttonContent emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              <span
                data-euiicon-type="calendar"
              />
            </span>
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover euiPopover-isOpen euiSuperDatePicker__startPopoverButton euiFormControlLayoutDelimited__input emotion-euiPopover-block-euiSuperDatePicker__rangeInput"
        >
          <button
            class="euiDatePopoverButton euiDatePopoverButton--start euiDatePopoverButton-isSelected emotion-euiDatePopoverButton"
            data-test-subj="superDatePickerstartDatePopoverButton"
            title="~ 15 minutes ago"
            type="button"
          >
            ~ 15 minutes ago
          </button>
        </div>
        <div
          class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued"
        >
          <span
            data-euiicon-type="sortRight"
          >
            to
          </span>
        </div>
        <div
          class="euiPopover euiFormControlLayoutDelimited__input emotion-euiPopover-block-euiSuperDatePicker__rangeInput"
        >
          <button
            class="euiDatePopoverButton euiDatePopoverButton--end emotion-euiDatePopoverButton"
            data-test-subj="superDatePickerendDatePopoverButton"
            title="now"
            type="button"
          >
            now
          </button>
        </div>
      </div>
    </div>
  </span>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <button
      class="euiButton euiSuperUpdateButton emotion-euiButtonDisplay-m-fill-primary"
      data-test-subj="superDatePickerApplyTimeButton"
      style="min-inline-size: 118px;"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="refresh"
        />
        Refresh
      </span>
    </button>
  </span>
</div>
`;
